# ParsingOnBS4

./: main.py  pyproject.toml  запчасти_9_page.xlsx  запчасти_temp_100.xlsx  запчасти_temp_200.xlsx  запчасти_temp_300.xlsx  запчасти_temp_400.xlsx  запчасти_temp_500.xlsx  запчасти_temp_600.xlsx  запчасти_temp_700.xlsx  запчасти_temp_800.xlsx
